kinda working agent!  Sensor close - autoConfigs, but not run to monitor cc (measuring disc, snp, tnp not written yet)  Swagger simulated disc of pati-13 :-)
