# lib/controllers/agentRoutes.js
@@ -1,18 +1,19 @@
 const moment = require('moment');
 const commonLib = require('../common');
+const request    = require('request-promise-native');
 
 let logger;
 
 //--------------------------- APIs -------------------------------
 let state;
 
-// return true if the sensor has that interfaceId assigned to it
-function isDefinedInterface(interfaceId, sensor) {
-  if (sensor && typeof(icId) !== 'undefined') {
-    connection = sensor.connections.find(c => c.interfaceId === icId);
-    if (!connection) {
-      errors.push(`unregistered interfaceId "${icId}"`);
-    }
+let reportTimer; // keep it out of the state object
+
+// return true if the sensor has that interfaceUid assigned to it
+function getDefinedInterface(uid, sensor) {
+  if (sensor && typeof(uid) !== 'undefined') {
+    connection = sensor.connections.find(c => c.interfaceUid === uid);
+    return connection;
   }
 }
 //
@@ -57,7 +58,7 @@ exports.postSensorReport = function(req, res) {
   let timestampDate;
   let timestampISO;
 
-  if (state.autoConfig && !state.config.sensors) {
+  if (state.autoConfig && !state.sensors) {
     res.status(405).send({ status: 'error', errors: ['agent has not been auto configured'] });
     if (state.debug) {
       logger.error('errors: ' + JSON.stringify(errors, null, '  '));
@@ -75,7 +76,7 @@ exports.postSensorReport = function(req, res) {
     if (typeof(sensorId) === 'undefined') {
       errors.push('sensorId is required');
     } else {
-      sensor = state.config.sensors.find(o => o.sensorId === sensorId)
+      sensor = state.sensors.find(o => o.sensor_id === sensorId)
       if (!sensor) {
         errors.push(`unrecognized sensorId "${sensorId}"`);
       }
@@ -113,7 +114,7 @@ exports.postSensorReport = function(req, res) {
     // process and validate each connection update in report
     if (connections && connections.length) {
       connections.forEach(ic => { // ic is incoming connection update
-        let interfaceId; // unique identifier of connection
+        let interfaceUid; // unique identifier of connection
         let charCount; // # of characters received in packets over sampling period
         let packetCount; // # of packets received during sampling period
         let connection; // found connection registered with icId
@@ -122,12 +123,12 @@ exports.postSensorReport = function(req, res) {
         let targetNoPing; // true if attempt to ping target server failed
 
 
-        if (!ic.interfaceId) {
-          errors.push(`interfaceId is required`);
-        } else if (!isDefinedInterface(ic.interfaceId, sensor)) {
-          errors.push(`interfaceId ${ic.interfaceId} not expected. as it is not in sensor ${sensorId} configuration`)
+        if (!ic.interfaceUid) {
+          errors.push(`interfaceUid is required`);
+        } else if (!getDefinedInterface(ic.interfaceUid, sensor)) {
+          errors.push(`interfaceUid ${ic.interfaceUid} not expected. as it is not in sensor ${sensorId} configuration`)
         } else {
-          interfaceId = ic.interfaceId;
+          interfaceUid = ic.interfaceUid;
         }
 
         // process the character count being reported (if any)
@@ -135,19 +136,19 @@ exports.postSensorReport = function(req, res) {
           if (typeof(ic.charCount) === 'number') {
             charCount = ic.charCount;
             if (charCount < 0) {
-              errors.push(`cannot report negative charCount (${charCount}) for interfaceId ${icId}`);
+              errors.push(`cannot report negative charCount (${charCount}) for interfaceUid ${icId}`);
             }
           } else if (typeof(ic.charCount) === 'string') {
             if (/^-\d+$/.test(ic.charCount)) {
               charCount = Number.parseInt(ic.charCount);
               if (charCount < 0) {
-                errors.push(`cannot report negative charCount (${charCount}) for interfaceId ${icId}`);
+                errors.push(`cannot report negative charCount (${charCount}) for interfaceUid ${icId}`);
               }
             } else {
-              errors.push(`expected number or parsable number string, got ${typeof(ic.charCount)} for interfaceId ${icId}`);
+              errors.push(`expected number or parsable number string, got ${typeof(ic.charCount)} for interfaceUid ${icId}`);
             }
           } else {
-            errors.push(`expected number or parsable number string, got ${typeof(ic.charCount)} for interfaceId ${icId}`);
+            errors.push(`expected number or parsable number string, got ${typeof(ic.charCount)} for interfaceUid ${icId}`);
           }
         }
 
@@ -202,7 +203,7 @@ exports.postSensorReport = function(req, res) {
             state.sensorsAccum.push(sensorId);
           }
 
-          let connection = state.connectionsAccum.find(o => o.interfaceId === icId);
+          let connection = state.connectionsAccum.find(o => o.interfaceUid === icId);
           if (connection) {
             if (charCount) {
               // have some volume of data to report
@@ -223,7 +224,7 @@ exports.postSensorReport = function(req, res) {
             // connection.timestamps.push(timestampIso);
           } else {
             state.connectionsAccum.push({
-              interfaceId: interfaceId,
+              interfaceUid: interfaceUid,
               charCount: charCount || 0,
               packetCount: packetCount || 0,
               disconnected: disconnected,
@@ -263,7 +264,7 @@ exports.postSensorStop = function(req, res) {
 };
 // Can ask agent - what was that last report that was sent?
 exports.getSensorPriorReport = function(req, res) {
-  res.send(state.priorReport || {});
+  res.send(state.agentReports.priorReport || {});
 };
 // Can ask agent for a report on demand, not waiting for next report period
 exports.getSensorNextReport = function(req, res) {
@@ -297,7 +298,7 @@ exports.getSensorAutoConfig = function(req, res) {
   if (typeof(sensorId) === 'undefined') {
     errors.push(`sensorId is required`);
   } else {
-    const sensor = state.config.sensors.find(s => s.sensorId === sensorId);
+    const sensor = state.sensors.find(s => `${s.sensor_id}` === sensorId);
     if (sensor) {
       // send along specified agent's configuration
       res.send({
@@ -319,51 +320,98 @@ exports.getSensorAutoConfig = function(req, res) {
     res.status(405).send({status: 'error', errors: errors});
   }
 };
-
-
+// queue requests so we can retry failed ones (e.g. SynergyCheck server is temporarily unavailable
+// Does give up after so many retries.  What to do with those abandoned agentReports?
 exports.sendReport = function() {
-  const theReport = exports.getReport();
-  postReportUrl = `${state.getProtoHostPort()}/${state.synergyCheck.apiBase}/agentReport?tx=${theReport.transactionId}`;
-  request({
-    method: 'POST',
-    uri: postReportUrl,
-    body: theReport,
-    headers: {
-      'Authorization': `Bearer ${state.synergyCheck.jwt}`
-    },
-    json: true // automatically stringifies body
-  }).then(obj => {
-    state.agentReportsSent++;
-    logger.debug(JSON.stringify(obj));
-  }).catch(err => {
-    state.agentReportErrors++;
-    logger.error(`Error from SynergyCheck for agentReport tx=${theReport.transactionId}, ${err}`);
-  });
-  if (state.verbose) {
-    logger.info(JSON.stringify(theReport, null, '  '));
-  }
-  // remember what you just sent
-  state.priorReport = theReport;
 
+  const theReport = exports.getReport();
+  const postReportUrl = `${commonLib.getProtoHostPort()}${state.synergyCheck.apiBase}agentReport?tx=${theReport.tx}`;
+  state.agentReportQueue.push([postReportUrl, theReport, 0]);
+
+  if (!state.agentReports.sending) {
+    // kick off queue processing
+    sendAgentReport(state.agentReportQueue.shift());
+  }
+  //
+  function sendAgentReport(item) {
+    if (!item || state.agentReports.sending) {
+      return;
+    }
+    //indicate we don't need to call sendAgentReport again (until it goes falsey)
+    state.agentReports.sending = Date.now();
+    request({
+      method: 'POST',
+      uri: item[0], // postReportUrl
+      body: item[1], // theReport
+      headers: {
+        'Authorization': `Bearer ${state.synergyCheck.jwt}`
+      },
+      json: true // automatically stringifies body
+    }).then(obj => {
+      logger.debug(JSON.stringify(obj));
+      state.agentReports.sent++;
+      // remember what you just successfully sent
+      state.agentReports.priorReport = theReport;
+      sendSomeMore();
+    }).catch(err => {
+      state.agentReports.errors++;
+      logger.error(`Error from SynergyCheck for agentReport tx=${theReport.transactionId}, ${err}`);
+
+      // resend after delay, but only a certain # of times before "giving up"
+      item[2] = item[2] + 1; // retries
+      if (item[2] < state.agentReports.maxRetries || 1) {
+        // Will retry this agentReport, so put it back at the head of the queue
+        state.agentReportQueue.unshift(item);
+        setTimeout(() => {
+          sendAgentReport(state.agentReportQueue.shift());
+        }, state.agentReports.sendDelay || 5000);
+      } else {
+        giveUpOn(item);
+        sendSomeMore();
+      }
+    });
+    if (state.verbose) {
+      logger.info(JSON.stringify(theReport, null, '  '));
+    }
+  }
+  //
+  function sendSomeMore() {
+    if (state.agentReportQueue.length) {
+      logger.debug(`agentReportQueue has ${state.agentReportQueue.length} items`);
+      setTimeout(() => {
+        sendAgentReport(state.agentReportQueue.shift());
+      }, state.agentReports.sendDelay || 5000);
+    } else {
+      logger.debug(`agentReportQueue is empty`);
+      // Indicate that it is ok to call sendAgentReport from sendReport
+      state.agentReports.sending = null;
+    }
+  }
+  //
+  function giveUpOn(item) {
+    logger.error(`giving up on ${item[1].tx} after ${item[2]} retries`);
+    // todo - write to file system or some log?
+  }
 };
 // return object containing body of post request to be sent to SynergyCheck.com server
 exports.getReport = function() {
   // generate unique transaction number
   // by combining id of the agent, a time factor, and a counter
   state.transactionCounter++;
-  const transactionId = `${state.config.agent.agentId}|${Math.floor(state.startedMills / 100 % 1000000)}|${state.transactionCounter}`;
+  const transactionId = `${state.agent.agentId}|${Math.floor(state.startedMills / 100 % 1000000)}|${state.transactionCounter}`;
   state.lastTransactionId = transactionId;
 
   const snapshot = {
-    cid: state.config.synergyCheck.customerId,
-    aid: state.config.agent.agentId,
+    cid: state.synergyCheck.customerId,
+    aid: state.agent.agentId,
     tx: transactionId,
     ts: moment().format(), // ISO with timezone // new Date().toISOString(),
-    dur: state.config.report.period,
+    dur: state.report.dur, // string
     // sensors: sensorsAccum.slice(0),
     int: state.connectionsAccum.map(o => {
       return {
         cnid: o.connectionId,
+        iid: o.interfaceUid,
         cc: o.charCount || 0,
         pc: o.packetCount || 0,
         ldts: o.lastMessageTimestamp, // ignored by SynergyCheck
@@ -377,45 +425,44 @@ exports.getReport = function() {
   state.connectionsAccum.length = 0; // reset accumulator for next report
   state.sensorsAccum.length = 0;
 
-  if (state.config.report.compress) {
+  if (state.report.compress) {
     // remove reporting those connections with no change from last report
-    if (priorReport) {
-      snapshot.connections = snapshot.connections.filter(o => {
+    if (state.agentReports.priorReport) {
+      // filter the connections based on if they report anything useful to state change of connection
+      snapshot.int = snapshot.int.filter(o => {
         if (o.charCount) {
-          return true; // always report if has messages
+          return true; // always report if has measured character traffic
         }
-        // no messages, check if change in disconnected? status
-        if (typeof(o.disconnected) !== 'undefined') {
-          // we have a value for disconnected
-          let connectionPrior = priorReport.connections.find(c => c.connectionId === o.connectionId);
-          if (connectionPrior) {
-            return connectionPrior.disconnected !== o.disconnected;
-          }
-          // we had no value prior
-          return true;
+        if (o.disconnected || o.snp || o.tnp) {
+          return true; // always report if any disconnected or no pings
         }
-        // no value for disconnected, so no change assumed from last report
-        return false;
+        // no messages, no disconnected, snp or tnp, check if change from prior status
+        let connectionPrior = state.agentReports.priorReport.int.find(c => c.cnid === o.connectionId);
+        if (connectionPrior) {
+          // all false, so a change if any were previously true
+          return connectionPrior.disconnected || connectionPrior.snp || connectionPrior.tnp;
+        }
+        return true; // always report if no prior to compare with
       });
     }
   }
   return snapshot;
 };
 //
-
 // start an interval timer to send updates to synergyCheck service in the cloud
 exports.startReporting = function() {
   const period = state.report.period || 60000;
-  state.timer = setInterval(function () {
+  reportTimer= setInterval(function () {
     logger.info(`time to send report! ${new Date().toISOString()}`);
-    agentRoutes.sendReport();
+    exports.sendReport();
   }, period);
   logger.info(`AgentReports started at ${new Date().toISOString()}, once per ${period}`);
 };
+//
 exports.stopReporting = function() {
   if (state.timer) {
     clearInterval(state.timer);
-    state.timer = null;
+    reportTimer= null;
   }
   logger.info(`AgentReports stopped at ${new Date().toISOString()}`);
 };
